# talks

./: .gitmodules  README.md  justfile  pyproject.toml
_src/: data.yml  main.py
_src/templates/: README.md.jinja
